[gd_scene load_steps=9 format=3 uid="uid://vq0k2at68tvl"]

[ext_resource type="Script" uid="uid://dftj7s7yfko1b" path="res://content/enemy/enemy_unit/enemy_unit.gd" id="1_gcm67"]
[ext_resource type="Resource" uid="uid://how3g5g1vhqv" path="res://content/enemy/enemy_unit/enemy_unit_data/goblin/goblin.tres" id="2_4vtmd"]
[ext_resource type="Shader" uid="uid://bbuoq2bfrlj8f" path="res://shader/outline.gdshader" id="2_37ufc"]
[ext_resource type="Texture2D" uid="uid://b6qf3lc6hen8y" path="res://content/enemy/enemy_unit/enemy_unit_data/goblin/tile127.png" id="2_ihq4h"]
[ext_resource type="Texture2D" uid="uid://cshjwr3eyxa5a" path="res://content/enemy/tile1005.png" id="5_4vtmd"]
[ext_resource type="PackedScene" uid="uid://clb64wa2em4es" path="res://gui/enemy_stats_ui/enemy_stats_ui.tscn" id="5_o28xt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ndtu2"]
shader = ExtResource("2_37ufc")
shader_parameter/line_colour = Color(0.247059, 0.14902, 0.192157, 1)
shader_parameter/line_thickness = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37ufc"]

[node name="EnemyUnit" type="Area2D"]
collision_layer = 4
script = ExtResource("1_gcm67")
data = ExtResource("2_4vtmd")

[node name="Visual" type="CanvasGroup" parent="."]
material = SubResource("ShaderMaterial_ndtu2")

[node name="MainSprite" type="Sprite2D" parent="Visual"]
texture = ExtResource("2_ihq4h")

[node name="TargetSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -14)
texture = ExtResource("5_4vtmd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_37ufc")

[node name="EnemyStatsUI" parent="." instance=ExtResource("5_o28xt")]
offset_top = 10.0
offset_bottom = 18.0
alignment = 1
metadata/_edit_use_anchors_ = true
